# mdbook-minijinja

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
example-book/: README.md  book.toml  run.sh
example-book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  conditional_chapter1.md  conditional_chapter2.md  disabled.md  enabled.md  partial.md  templates.md
example-book/templates/: conditional_summary_section.md  template1.md  template2.md
src/: config.rs  dynamic_env.rs  extra_globals.rs  main.rs  preprocessor.rs
