[package]
name = "mdbook-minijinja"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "mdbook-minijinja is an mdbook preprocessor that evaluates book chapters as minijinja templates."
repository = "https://github.com/ssanderson/mdbook-minijinja"
readme = "README.md"
keywords = ["mdbook", "jinja", "jinja2", "templates"]

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["string"]}
env_logger = "0.11.5"
log = "0.4.22"
mdbook = {version = "0.4.40", default-features = false}
minijinja = {version = "2.4.0", features = ["loader"]}
semver = "1.0.23"
serde = "1.0.214"
serde_json = "1.0.132"
toml = "0.8.19"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
