[package]
name = "mdbook-minijinja"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "mdbook-minijinja is an mdbook preprocessor that evaluates book chapters as minijinja templates."
repository = "https://github.com/ssanderson/mdbook-minijinja"
readme = "README.md"
keywords = ["mdbook", "jinja", "jinja2", "templates"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["string"]}
env_logger = "0.11.6"
log = "0.4.25"
mdbook = {version = "=0.4.43", default-features = false}
minijinja = {version = "2.7.0", features = ["loader", "loop_controls", "stacker", "speedups"]}
minijinja-contrib = { version = "2.7.0", features = ["pycompat"] }
semver = "1.0.25"
serde = "1.0.217"
serde_json = "1.0.138"
toml = "0.8.20"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
